src/main/java/com/example/postBlog/error/DeniedException.java
package com.example.postBlog.error;

public class DeniedException extends RuntimeException{
    
}
